--- a/MainProject/MainProject.vcxproj
+++ b/MainProject/MainProject.vcxproj
@@ -113,6 +113,7 @@
     <ClInclude Include="Classes\Orthrus.h" />
     <ClInclude Include="Classes\Player.h" />
     <ClInclude Include="Classes\ICollider.h" />
+    <ClInclude Include="Classes\PlayerData.h" />
     <ClInclude Include="Classes\Witch.h" />
     <ClInclude Include="HEToolKit\cppcoro\cppcoro.h" />
     <ClInclude Include="HEToolKit\DirectXTK\Bezier.h" />
@@ -130,7 +131,6 @@
     <ClInclude Include="SceneManagement.h" />
     <ClInclude Include="Scenes\DontDestroyOnLoad.h" />
     <ClInclude Include="Scenes\MainScene.h" />
-    <ClInclude Include="Scenes\PlayerData.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -142,6 +142,7 @@
     <ClCompile Include="Classes\Goblin.cpp" />
     <ClCompile Include="Classes\Orthrus.cpp" />
     <ClCompile Include="Classes\Player.cpp" />
+    <ClCompile Include="Classes\PlayerData.cpp" />
     <ClCompile Include="Classes\Witch.cpp" />
     <ClCompile Include="HEToolKit\DirectXTK\Keyboard.cpp" />
     <ClCompile Include="HEToolKit\DirectXTK\Mouse.cpp" />
@@ -158,7 +159,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Use</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Scenes\MainScene.cpp" />
-    <ClCompile Include="Scenes\PlayerData.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
