タイトルシーンクラスを追加。マネジメントのいじり途中

--- a/MainProject/MainProject.vcxproj.filters
+++ b/MainProject/MainProject.vcxproj.filters
@@ -115,6 +115,9 @@
     <ClInclude Include="Scenes\GameOverScene.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes\TitleScene.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -175,6 +178,9 @@
       <Filter>Classes</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\GameOverScene.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="Scenes\TitleScene.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
